# class_registration_system

./: app.py  ddl.sql  pyproject.toml  seed_db.py  seed_realistic_db.py
