[project]
name = "system-zapisow"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Mateusz Wojciechowski",email = "120648222+Mateusz-Wojciechowski@users.noreply.github.com"}
]

requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
