[project]
name = "system-zapisow"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Mateusz Wojciechowski",email = "120648222+Mateusz-Wojciechowski@users.noreply.github.com"}
]

requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "faker (>=40.11.1,<41.0.0)",
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
